samples/_failures_safe/1761453062_bfb6a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38029eb1.c: In function ‘main’:
./samples/SAFE/__tmp_38029eb1.c:147:12: error: missing terminating " character
  147 |     printf("\nTranspose of A:\n
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_38029eb1.c:147:5: error: expected expression at end of input
  147 |     printf("\nTranspose of A:\n
      |     ^~~~~~
./samples/SAFE/__tmp_38029eb1.c:147:5: error: expected declaration or statement at end of input
